--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "ethers": "^6.16.0",
-    "vue": "^3.5.25"
+    "vue": "^3.5.25",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
