feat: migrate custom templates and css to syvora ui library

--- a/web/tsconfig.app.json
+++ b/web/tsconfig.app.json
@@ -10,7 +10,13 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Path aliases for @syvora/ui */
+    "paths": {
+      "@syvora/ui": ["../packages/ui/src/index.ts"],
+      "@syvora/ui/*": ["../packages/ui/src/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
