--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syvora/ui": "*",
     "ethers": "^6.16.0",
     "vue": "^3.5.25",
     "vue-router": "^5.0.3"
