--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: 20
 
+      - name: Install workspace dependencies
+        run: npm install
+
       - name: Install Vercel CLI
         run: npm install -g vercel@latest
 
