--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 20
 
       - name: Install workspace dependencies
-        run: npm install
+        run: npm install --no-package-lock
 
       - name: Install Vercel CLI
         run: npm install -g vercel@latest
