--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2",
     "@syvora/ui": "*",
     "ethers": "^6.16.0",
     "vue": "^3.5.25",
